--- a/IPhone14PRO-11/i-phone1-pro11.html
+++ b/IPhone14PRO-11/i-phone1-pro11.html
@@ -35,7 +35,7 @@
           </span>
         </div>
         <div class="i-phone1-pro12-group129">
-          <span class="i-phone1-pro12-text11"><span>Rock n’ Roll</span></span>
+          <span class="i-phone1-pro12-text11"><span>Rock n' Roll</span></span>
         </div>
         <a href="../IPhone14PRO-5/i-phone1-pro5.html">
           <div class="i-phone1-pro12-framecomponentlottiehttpsassets2lottiefilescompack">
@@ -66,7 +66,7 @@
             <span class="i-phone1-pro12-text18">
               <span>2020 | Royal Albert Hall</span>
             </span>
-            <span class="i-phone1-pro12-text20"><span>35,00€</span></span>
+            <span class="i-phone1-pro12-text20"><span>35,00&euro;</span></span>
             <img
               src="./img/arctic.png"
               alt="ArcticMonkeysLiveattheRoyalAlbertHall03e803e8135291552"
