--- a/IPhone14PRO-3/i-phone1-pro3.html
+++ b/IPhone14PRO-3/i-phone1-pro3.html
@@ -60,7 +60,7 @@
           <span class="i-phone1-pro3-text15">
             <span>2023 | SWELL MAPS C21</span>
           </span>
-          <span class="i-phone1-pro3-text17"><span>25,00€</span></span>
+          <span class="i-phone1-pro3-text17"><span>25,00&euro;</span></span>
           <img
             src="./img/artic.png"
             alt="SwellMapsC21PolarRegions700x03e803e813522811552"
@@ -78,7 +78,7 @@
           <span class="i-phone1-pro3-text24">
             <span>2008 | Appetire 4 Destruction</span>
           </span>
-          <span class="i-phone1-pro3-text26"><span>30,00€</span></span>
+          <span class="i-phone1-pro3-text26"><span>30,00&euro;</span></span>
           <img
             src="./img/guns&roses.png"
             alt="GunsnRosesAppetiteforDestructionalbumcover03e803e81552"
@@ -97,7 +97,7 @@
             <span class="i-phone1-pro3-text33">
               <span>2020 | Royal Albert Hall</span>
             </span>
-            <span class="i-phone1-pro3-text35"><span>35,00€</span></span>
+            <span class="i-phone1-pro3-text35"><span>35,00&euro;</span></span>
             <img
               src="./img/arctic.png"
               alt="ArcticMonkeysLiveattheRoyalAlbertHall03e803e8135291552"
@@ -108,7 +108,7 @@
         <div class="i-phone1-pro3-monkeys1">
           <span class="i-phone1-pro3-text37"><span>Departure</span></span>
           <span class="i-phone1-pro3-text39"><span>2016 | Journey</span></span>
-          <span class="i-phone1-pro3-text41"><span>27,00€</span></span>
+          <span class="i-phone1-pro3-text41"><span>27,00&euro;</span></span>
           <img
             src="./img/bug.png"
             alt="MS0yODk3LmpwZWc11552"
@@ -118,7 +118,7 @@
         <div class="i-phone1-pro3-monkeys2">
           <span class="i-phone1-pro3-text43"><span>Adolescents</span></span>
           <span class="i-phone1-pro3-text45"><span>2009 || La vendetta</span></span>
-          <span class="i-phone1-pro3-text47"><span>24,00€</span></span>
+          <span class="i-phone1-pro3-text47"><span>24,00&euro;</span></span>
           <img
             src="./img/idk.png"
             alt="IMAGE71ujr2aprL11552"
@@ -129,7 +129,7 @@
           <span class="i-phone1-pro3-text49"><span>Shake the Shudder</span></span>
           <span class="i-phone1-pro3-text51">
           <span>2017 | !!! CHK CHK CHK</span></span>
-          <span class="i-phone1-pro3-text53"><span>25,00€</span></span>
+          <span class="i-phone1-pro3-text53"><span>25,00&euro;</span></span>
           <img
             src="./img/chkchkchk.png"
             alt="ChkChkChkShaketheShudder03e803e81791111552"
