--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="./i-phone1-pro1.css" rel="stylesheet" />
+    <link href="./Backend.js" rel="stylesheet">
 </head>
 <body>
   <div class="centered-container">
@@ -16,14 +17,14 @@
           <span>Welcome to Melodies of the Past</span>
         </span>
         <div class="i-phone1-pro1-group2">
-          <span class="i-phone1-pro1-text04"><span>Username</span></span>
+          <span class="i-phone1-pro1-text04"><span><input type="text" id="username-input" class="search-input" placeholder="Username" /></span></span>
         </div>
         <div class="i-phone1-pro1-group3">
-          <span class="i-phone1-pro1-text06"><span>Email</span></span>
+          <span class="i-phone1-pro1-text06"><span><input type="email" id="email-input" class="search-input" placeholder="Email" /></span></span>
         </div>
         <div class="i-phone1-pro1-group125">
-          <span class="i-phone1-pro1-text08"><span>Password</span></span>
-        </div>
+          <span class="i-phone1-pro1-text08"><span><input type="password" id="password-input" class="search-input" placeholder="Password" /></span></span>
+        </div>        
         <a href="../IPhone14PRO-3/i-phone1-pro3.html" class="login-link">
           <div class="i-phone1-pro1-group5">
             <span class="i-phone1-pro1-text10"><span>Sign up</span></span>
