--- a/IPhone14PRO-7/i-phone1-pro7.html
+++ b/IPhone14PRO-7/i-phone1-pro7.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="./i-phone1-pro7.css" />
+  <link href="./i-phone1-pro7.css" rel="stylesheet" />
+  <script src="../Backend.js"></script>
 </head>
-<body>
+<body onload="bodyLoad()">
   <div class="centered-container">
     <div class="i-phone1-pro7-container">
       <div class="i-phone1-pro7-i-phone1-pro7">
@@ -13,11 +14,9 @@
           class="i-phone1-pro7-screenshot2removebgpreview33"
         />
         <div class="i-phone1-pro7-group127">
-          <img
-            src="./img/search.png"
-            alt="Rectangle21552"
-            class="i-phone1-pro7-rectangle2"
-          />
+          <img src="./img/search.png" alt="Rectangle21552" class="i-phone1-pro7-rectangle2"/>
+          <input id="searchInput" class="search-input" type="text" placeholder="Search" oninput="search()">
+          <div id="lista"></div>
         </div>
         <a href="../IPhone14PRO-5/i-phone1-pro5.html">
           <div class="i-phone1-pro7-framecomponentlottiehttpsassets2lottiefilescompack">
