--- a/IPhone14PRO-4/i-phone1-pro4.html
+++ b/IPhone14PRO-4/i-phone1-pro4.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="./i-phone1-pro4.css" />
+    <script src="../Backend.js"></script>
   </head>
-<body>
+<body onload="bodyLoad()">
   <div class="centered-container">
       <div class="i-phone1-pro4-container">
         <div class="i-phone1-pro4-i-phone1-pro4">
@@ -18,6 +19,8 @@
               alt="Rectangle21552"
               class="i-phone1-pro4-rectangle2"
             />
+            <input id="searchInput" class="search-input" type="text" placeholder="Search" oninput="search()">
+            <div id="lista"></div>
           </div>
           <a href="../IPhone14PRO-5/i-phone1-pro5.html" class="login-link">
             <div
