--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <link href="./i-phone1-pro1.css" rel="stylesheet" />
-    <link href="./Backend.js" rel="stylesheet">
+    <script src="./Backend.js"></script>
+    <title>MOTP - Melodies of the Past</title>
 </head>
 <body>
   <div class="centered-container">
@@ -25,12 +26,12 @@
         <div class="i-phone1-pro1-group125">
           <span class="i-phone1-pro1-text08"><span><input type="password" id="password-input" class="search-input" placeholder="Password" /></span></span>
         </div>        
-        <a href="../IPhone14PRO-3/i-phone1-pro3.html" class="login-link">
+        <a href="../LaranjoTomas.github.io/IPhone14PRO-3/i-phone1-pro3.html" class="login-link">
           <div class="i-phone1-pro1-group5">
             <span class="i-phone1-pro1-text10"><span>Sign up</span></span>
           </div>
         </a>
-        <a href="../IPhone14PRO-2/i-phone1-pro2.html" class="login-link">
+        <a href="../LaranjoTomas.github.io/IPhone14PRO-2/i-phone1-pro2.html" class="login-link">
           <div>  
             <span class="i-phone1-pro1-text12">
               <span>Already have an account?</span>
