--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="i-phone1-pro1-text10"><span>Sign up</span></span>
           </div>
         </a>
-        <a href="../LaranjoTomas.github.io/IPhone14PRO-2/i-phone1-pro2.html" class="login-link">
+        <a href="./IPhone14PRO-2/i-phone1-pro2.html" class="login-link">
           <div>  
             <span class="i-phone1-pro1-text12">
               <span>Already have an account?</span>
