--- a/IPhone14PRO-9/i-phone1-pro9.html
+++ b/IPhone14PRO-9/i-phone1-pro9.html
@@ -36,12 +36,15 @@
             alt="creditcard11552"
             class="i-phone1-pro9-creditcard1"
           />
-          <img
-            src="./img/paypal.png"
-            alt="paypal11552"
-            class="i-phone1-pro9-paypal1"
-          />
-          <span class="i-phone1-pro9-text02"><span>Paypal</span></span>
+          <a href="../paypal.html" >
+            <img
+              src="./img/paypal.png"
+              alt="paypal11552"
+              class="i-phone1-pro9-paypal1"
+            />
+            
+          </a>
+          <span class="i-phone1-pro9-text02" ><span>Paypal</span></span>
           <span class="i-phone1-pro9-text04"><span>Credit card</span></span>
           <span class="i-phone1-pro9-text06"><span>ATM</span></span>
         </div>
