--- a/IPhone14PRO-9/i-phone1-pro9.html
+++ b/IPhone14PRO-9/i-phone1-pro9.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="./i-phone1-pro9.css" />
+  <script src="../Backend.js"></script>
 </head>
 <body>
   <div class="centered-container">
