--- a/IPhone14PRO-5/i-phone1-pro5.html
+++ b/IPhone14PRO-5/i-phone1-pro5.html
@@ -43,14 +43,16 @@
           />
           <span class="i-phone1-pro5-text02"><span>Definitions</span></span>
         </div>
-        <div class="i-phone1-pro5-group875">
-          <span class="i-phone1-pro5-text04"><span>Notifications</span></span>
-          <img
-            src="./img/notificacoes.png"
-            alt="Vector1552"
-            class="i-phone1-pro5-vector24"
-          />
-        </div>
+        <a href="../IPhone14PRO-18/i-phone1-pro18.html">
+          <div class="i-phone1-pro5-group875">
+            <span class="i-phone1-pro5-text04"><span>Notifications</span></span>
+            <img
+              src="./img/notificacoes.png"
+              alt="Vector1552"
+              class="i-phone1-pro5-vector24"
+            />
+          </div>
+        </a>
         <div class="i-phone1-pro5-group8751">
           <span class="i-phone1-pro5-text06"><span>Feedback</span></span>
           <img
