--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="i-phone1-pro1-group125">
           <span class="i-phone1-pro1-text08"><span><input type="password" id="password-input" class="search-input" placeholder="Password" /></span></span>
         </div>        
-        <a href="../LaranjoTomas.github.io/IPhone14PRO-3/i-phone1-pro3.html" class="login-link">
+        <a href="./IPhone14PRO-3/i-phone1-pro3.html" class="login-link">
           <div class="i-phone1-pro1-group5">
             <span class="i-phone1-pro1-text10"><span>Sign up</span></span>
           </div>
