--- a/IPhone14PRO-4/i-phone1-pro4.html
+++ b/IPhone14PRO-4/i-phone1-pro4.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="./i-phone1-pro4.css" />
     <script src="../Backend.js"></script>
+    <script src="./javascript.js"></script>
   </head>
 <body onload="bodyLoad()">
   <div class="centered-container">
@@ -54,11 +55,10 @@
               />
             </div>
           </a>
-          <img
-            src="./img/play.png"
-            alt="Vector1552"
-            class="i-phone1-pro4-vector24"
-          />
+          <img id="playButton" src="./img/play.png" alt="" class="i-phone1-pro4-vector24 playButton" />
+          <audio id="audioPlayer">
+            <source src="./img/music.mp3" type="audio/mp3">
+          </audio>
           <span class="i-phone1-pro4-text06">
             <span>Category : Indie | Alternative | Pop | Rock</span>
           </span>
