--- a/IPhone14PRO-3/i-phone1-pro3.html
+++ b/IPhone14PRO-3/i-phone1-pro3.html
@@ -170,7 +170,7 @@
           />
         </div>
         <img
-          src="./img/rodapé.png"
+          src="./img/rodape.png"
           alt="Screenshot3removebgpreview211566"
           class="i-phone1-pro3-screenshot3removebgpreview21"
         />
