--- a/IPhone14PRO-5/i-phone1-pro5.html
+++ b/IPhone14PRO-5/i-phone1-pro5.html
@@ -135,7 +135,7 @@
           </div>
         </a>
         <img
-          src="./img/rodapé.png"
+          src="./img/rodape.png"
           alt="Screenshot3removebgpreview211566"
           class="i-phone1-pro5-screenshot3removebgpreview21"
         />
